# paraview_mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  NOTICE.md  README.md  environment.yaml  opencode-config.json  opencode.json  pyproject.toml  requirements.txt
.omo/: boulder.json
.omo/evidence/: task-1-conda-search.txt  task-1-decision.txt  task-1-make-dry-run.txt  task-1-no-paraview-dep.txt  task-10-smoke.txt  task-2-assertions.txt  task-2-ast-check.txt  task-2-build-diff-summary.txt  task-2-git-diff.txt  task-2-grep-checks.txt  task-2-import-grep.txt  task-2-paraview-pin-check.txt  task-2-py-compile.txt  task-2-yaml-parse.txt  task-3-script-preserved.txt  task-3-toml-parse.txt  task-4-headings.txt  task-5-occurrences.txt  task-6-git-rm.txt  task-7-makefile-check.txt  task-8-sweep.txt  task-9-notice-sha256.txt
.omo/evidence/final-qa/: build-after.txt  edge-case-a-build.txt  edge-case-b-default.txt  f2-issues.txt  f3-full-report.txt  f3-url-results.txt  f4-scope-report-v2.txt  f4-scope-report.txt  scenario3-grep-checks.txt  tabs-check.txt
.omo/notepads/makefile-create-dev-update/: learnings.md
.omo/notepads/reproducibility-and-readme/: learnings.md
.omo/plans/: makefile-create-dev-update.md  pyproject-toml-setup.md  reproducibility-and-readme.md
.omo/run-continuation/: ses_1714ec9f6ffeUxPwwZDFey50bo.json  ses_171f91a83ffeH55XW883pNZydL.json  ses_1720a19c3ffeWwtEugjao00S6B.json
paraview_mcp/: __init__.py  cli.py  logger.py  main.py  manager.py  paraview_manager.py  prompts.py  tools.py
paraview_mcp/v1/: __init__.py  paraview_manager.py  pv_mcp.py
paraview_mcp/v2/: __init__.py  paraview_manager.py  pv_mcp.py
paraview_mcp/v3/: __init__.py  pv_mcp.py  pv_runner.py
scripts/: start_pvserver.bash
