[project]
name = "paraview-mcp"
version = "0.2.0"
description = "MCP server exposing ParaView operations as tools for LLM-driven visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    {name = "Shusen Liu", email = "liu42@llnl.gov"},
    {name = "Haichao Miao", email = "miao1@llnl.gov"},
]
keywords = ["paraview", "mcp", "visualization", "llm", "scientific-visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
# Note: 'paraview' is intentionally omitted — it is only installable via conda
# (conda-forge::paraview) and cannot be pip-installed.
dependencies = [
    "fastmcp>=2.9.2",
    "httpx==0.28.1",
    "mcp[cli]==1.9.4",
]

[project.urls]
Homepage = "https://github.com/NicholasSynovic/paraview_mcp"
Repository = "https://github.com/NicholasSynovic/paraview_mcp"
Issues = "https://github.com/NicholasSynovic/paraview_mcp/issues"

[project.scripts]
paraview-mcp = "paraview_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paraview_mcp"]

[tool.ruff]
# Line length follows .editorconfig (and the former [tool.black] setting).
line-length = 80

[tool.ruff.lint]
# F403/F405: `from paraview.simple import *` is intentional and load-bearing
# (dozens of ParaView symbols are only available via the star import), so the
# "may be undefined" warnings it triggers are ignored project-wide. E722 (bare
# except) is addressed in code, not ignored here.
ignore = ["F403", "F405"]


[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "uv==0.11.18",
    "ruff",
]
